--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -237,7 +237,7 @@
          <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Send bestillingen</h1>
-            <p>Nå trenger du ikke gjøre noe mer. Med engang bestillingen har blitt motatt vil designere våres starte å lage designen</p>
+            <p>Med engang bestillingen har blitt motatt vil vi kontaktere deg tilbake innen 60 minutter</p>
          </div>
       </div>
       <!-- PROCCESS CARD -->
@@ -334,7 +334,7 @@
         <div class="carousel-item active">
              <!-- QUOTE CONTENT -->
             <div class="content">
-               <h1>Beste valget jeg kunne ha tatt for <span>nettbutikken</span> min!</h1>
+               <h1>Beste valget jeg kunne ha tatt for <span>bedriften</span> min!</h1>
                <!-- IMG -->
                <div class="img">
                   <img src="{% static '/images/other/man-hat.jpg' %}" alt="webiser">
@@ -358,7 +358,7 @@
         <div class="carousel-item">
             <!-- QUOTE CONTENT -->
             <div class="content">
-               <h1>Takker <span>webiser</span> kan jeg selge produktene mine online</h1>
+               <h1>Takker <span>webiser</span> kan jeg selge produktene mine</h1>
                <!-- IMG -->
                <div class="img">
                   <img src="{% static '/images/other/man-pc.jpg' %}" alt="webiser">
@@ -391,6 +391,8 @@
       </a> -->
     </div>
 </div>
+
+
 <div class="border-div quote-prices">
    <div class="line"></div>
 </div>
@@ -459,7 +461,7 @@
                            <div class="icon-same">
                               <span></span>
                            </div>
-                           <p>Logo & Bilder</p>
+                           <p>Logo</p>
                         </div>
                         <!-- PRODUCT BENEFITS -->
                         <div class="flex">
@@ -467,7 +469,7 @@
                            <div class="icon">
                               <i class="fa-solid fa-check"></i>
                            </div>
-                           <p>5-10 dager levering</p>
+                           <p>5-14 dager levering</p>
                         </div>
                         <!-- PRODUCT BENEFITS -->
                         <div class="flex">
@@ -483,7 +485,7 @@
                            <div class="icon-same">
                               <span></span>
                            </div>
-                           <p>Bli medlem funksjon</p>
+                           <p>Tekst/Copywrite</p>
                         </div>
                          <!-- PRODUCT BENEFITS -->
                         <div class="flex">
@@ -501,6 +503,22 @@
                            </div>
                            <p>Hosting til 60kr/m</p>
                         </div>
+                        <!-- PRODUCT BENEFITS -->
+                        <div class="flex">
+                           <!-- PRODUCT BENEFITS ICON -->
+                           <div class="icon-same">
+                              <span></span>
+                           </div>
+                           <p>Alle funksjonene</p>
+                        </div>
+                        <!-- PRODUCT BENEFITS -->
+                        <div class="flex">
+                           <!-- PRODUCT BENEFITS ICON -->
+                           <div class="icon-same">
+                              <span></span>
+                           </div>
+                           <p>Logg inn & Lag bruker</p>
+                        </div>
                      </div>
                   {% endif %}     
                {% endfor %}   
@@ -516,8 +534,8 @@
                         </div>
                   </div>
                   <div class="product-row-two">
-                     <!-- PRODUCT BENEFITS -->
-                     <div class="flex">
+                      <!-- PRODUCT BENEFITS -->
+                      <div class="flex">
                         <!-- PRODUCT BENEFITS ICON -->
                         <div class="icon">
                            <i class="fa-solid fa-check"></i>
@@ -546,7 +564,15 @@
                         <div class="icon">
                            <i class="fa-solid fa-check"></i>
                         </div>
-                        <p>5 ekstra sider</p>
+                        <p>4 ekstra sider</p>
+                     </div>
+                     <!-- PRODUCT BENEFITS -->
+                     <div class="flex">
+                        <!-- PRODUCT BENEFITS ICON -->
+                        <div class="icon-same">
+                           <span></span>
+                        </div>
+                        <p>Logo</p>
                      </div>
                      <!-- PRODUCT BENEFITS -->
                      <div class="flex">
@@ -554,15 +580,7 @@
                         <div class="icon">
                            <i class="fa-solid fa-check"></i>
                         </div>
-                        <p>Logo & Bilder</p>
-                     </div>
-                     <!-- PRODUCT BENEFITS -->
-                     <div class="flex">
-                        <!-- PRODUCT BENEFITS ICON -->
-                        <div class="icon">
-                           <i class="fa-solid fa-check"></i>
-                        </div>
-                        <p>5-10 dager levering</p>
+                        <p>5-14 dager levering</p>
                      </div>
                      <!-- PRODUCT BENEFITS -->
                      <div class="flex">
@@ -578,9 +596,9 @@
                         <div class="icon">
                            <i class="fa-solid fa-check"></i>
                         </div>
-                        <p>Bli medlem funksjon</p>
+                        <p>Tekst/Copywrite</p>
                      </div>
-                     <!-- PRODUCT BENEFITS -->
+                      <!-- PRODUCT BENEFITS -->
                      <div class="flex">
                         <!-- PRODUCT BENEFITS ICON -->
                         <div class="icon">
@@ -595,6 +613,22 @@
                            <i class="fa-solid fa-check"></i>
                         </div>
                         <p>Hosting til 60kr/m</p>
+                     </div>
+                     <!-- PRODUCT BENEFITS -->
+                     <div class="flex">
+                        <!-- PRODUCT BENEFITS ICON -->
+                        <div class="icon">
+                           <i class="fa-solid fa-check"></i>
+                        </div>
+                        <p>Alle funksjonene</p>
+                     </div>
+                     <!-- PRODUCT BENEFITS -->
+                     <div class="flex">
+                        <!-- PRODUCT BENEFITS ICON -->
+                        <div class="icon">
+                           <i class="fa-solid fa-check"></i>
+                        </div>
+                        <p>Logg inn & Lag bruker</p>
                      </div>
                   </div>
                {% endif %}         
@@ -630,7 +664,7 @@
                      <div class="icon">
                         <i class="fa-solid fa-check"></i>
                      </div>
-                     <p>Gratis hjelp innen 30 dager</p>
+                     <p>Gratis hjelp innen 14 dager</p>
                   </div>
                   <!-- PRODUCT BENEFITS -->
                   <div class="flex">
@@ -638,7 +672,7 @@
                      <div class="icon">
                         <i class="fa-solid fa-check"></i>
                      </div>
-                     <p>10 ekstra sider</p>
+                     <p>7 ekstra sider</p>
                   </div>
                   <!-- PRODUCT BENEFITS -->
                   <div class="flex">
@@ -646,7 +680,7 @@
                      <div class="icon">
                         <i class="fa-solid fa-check"></i>
                      </div>
-                     <p>Logo & Bilder</p>
+                     <p>Logo</p>
                   </div>
                   <!-- PRODUCT BENEFITS -->
                   <div class="flex">
@@ -654,7 +688,7 @@
                      <div class="icon">
                         <i class="fa-solid fa-check"></i>
                      </div>
-                     <p>10-14 dager levering</p>
+                     <p>10-20 dager levering</p>
                   </div>
                   <!-- PRODUCT BENEFITS -->
                   <div class="flex">
@@ -670,9 +704,9 @@
                      <div class="icon">
                         <i class="fa-solid fa-check"></i>
                      </div>
-                     <p>Bli medlem funksjon</p>
+                     <p>Tekst/Copywrite</p>
                   </div>
-                  <!-- PRODUCT BENEFITS -->
+                   <!-- PRODUCT BENEFITS -->
                   <div class="flex">
                      <!-- PRODUCT BENEFITS ICON -->
                      <div class="icon">
@@ -688,11 +722,38 @@
                      </div>
                      <p>Hosting til 60kr/m</p>
                   </div>
+                  <!-- PRODUCT BENEFITS -->
+                  <div class="flex">
+                     <!-- PRODUCT BENEFITS ICON -->
+                     <div class="icon">
+                        <i class="fa-solid fa-check"></i>
+                     </div>
+                     <p>Alle funksjonene</p>
+                  </div>
+                  <!-- PRODUCT BENEFITS -->
+                  <div class="flex">
+                     <!-- PRODUCT BENEFITS ICON -->
+                     <div class="icon">
+                        <i class="fa-solid fa-check"></i>
+                     </div>
+                     <p>Logg inn & Lag bruker</p>
+                  </div>
                   </div>
                {% endif %}         
          {% endfor %} 
          </div>
       </div>
+   </div>
+</div>
+<div class="border-div prices-secure-payments">
+   <div class="line"></div>
+</div>
+<div class="secure-payments">
+   <div class="content">
+      <div class="text">
+         <h1>Sikre betalinger via <span>vipps</span></h1>
+      </div>
+      <img src="{% static '/images/covers/vipps-cover.png' %}" alt="webiser">
    </div>
 </div>
 
