--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -29,6 +29,7 @@
              <div class="order-form-inputs">
                 <input type="text" name="product_price" id="product_price" style="display:none;">
                 <input type="text" name="tag" id="tag" style="display:none;">
+                <input type="user" name="user" id="user" style="display:none;">
                <!-- PRODUCT -->
                <label for="product">Velg nettside</label>
                <br>
