--- a/apps/core/templates/core/footer.html
+++ b/apps/core/templates/core/footer.html
@@ -38,20 +38,17 @@
                 <a href="/">Om oss</a>
                 <a href="/">Prosjekter</a>
                 <a href="/">Forum</a>
-            </li>
-        </ul>
-        <ul class="footer-ul">
-            <h1>Kundeservice</h1>
-            <li class="footer-li">
-                <a href="/">Kontakt Oss</a>
-                <a href="/">Nettside Endringer</a>
-                <a href="/">Språkene</a>
+                <a href="/">Forum</a>
+                <a href="/">Forum</a>
             </li>
         </ul>
     </div>
     <div class="social-icons">
-        <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-instagram"></i>
-        <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-tiktok"></i>
+        <h1>Finn oss her</h1>
+        <div class="icons">
+            <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-instagram"></i>
+            <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-tiktok"></i>
+        </div>
     </div>
     <div class="copyright">
         <p>Copyright &#169; 2020-2021 Webiser</p>
