--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -44,6 +44,10 @@
   margin-bottom: -20px;
 }
 
+.border-div.prices-secure-payments {
+  margin-block: 5px;
+}
+
 .intro {
   background: white;
   width: 100%;
@@ -426,6 +430,7 @@
   height: auto;
   line-height: 27px;
   width: auto;
+  padding-right: 10px;
 }
 
 .boost-conversions {
@@ -600,6 +605,7 @@
   font-size: 42px;
   padding-bottom: 5px;
   font-style: italic;
+  height: 220px;
 }
 
 .customer-quote .content h1 span {
@@ -959,6 +965,40 @@
 .prices .content .product-section .product.big.scale {
   -webkit-transform: scale(1);
           transform: scale(1);
+}
+
+.secure-payments {
+  background: white;
+  width: 100%;
+  height: auto;
+  margin-top: 0;
+  padding: 25px;
+}
+
+.secure-payments img {
+  margin-block: 15px;
+  height: auto;
+  width: 70%;
+  max-width: 370px;
+}
+
+.secure-payments .text {
+  text-align: left;
+}
+
+.secure-payments .text h1 {
+  -webkit-transform: translateY(7px);
+          transform: translateY(7px);
+  color: #183B56;
+  text-shadow: 1px 0 #183B56;
+  letter-spacing: 1px;
+  font-size: 22px;
+  font-weight: 800;
+}
+
+.secure-payments .text h1 span {
+  color: #FF5B24;
+  text-shadow: 1px 0 #FF5B24;
 }
 
 .our-story {
